--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,11 +16,12 @@
 	<header>
 		<div class="header-top">
 			<a>Find A Dealer</a>
-			<a>Support</a>
+			<a class="dropdown-toggle">Support</a>
+			<span></span>
 		</div>
 		<nav class="header-bottom">
 			<div>
-				<img src="img/logo.png">
+				<img id="nav-logo" src="img/logo.png">
 			</div>
 			<div>
 				<a>GUITARS</a>
@@ -29,6 +32,13 @@
 				<a>THIS IS MARTIN</a>
 			</div>
 			<div>
+				<div>
+					<h1>Search</h1>
+				</div>
+				<div>
+					<h1>Account/Cart</h1>
+				</div>
+
 			</div>
 		</nav>
 	</header>
