Added styling to nav bar

--- a/index.html
+++ b/index.html
@@ -12,27 +12,33 @@
 </head>
 
 <body>
-
 	<header>
-		<div class="header-top">
-                <a>Find A Dealer</a>
-                <a class="dropdown-toggle">Support</a>
-			<span></span>
+		<div class="header-top-full">
+			<div class="header-top-container row">
+				<div class="header-top">
+					<a>Find A Dealer</a>
+					<div class="header-top-support-container">
+						<a class="header-top-support">Support</a>
+						<span class="header-top-toggle"></span>
+					</div>
+				</div>
+			</div>
 		</div>
 
-		<nav class="header-bottom">
-			<div>
-				<img id="nav-logo" src="img/logo.png">
-			</div>
-			<div>
-				<a>GUITARS</a>
-				<a>UKULELES</a>
-				<a>STRINGS</a>
-				<a>CUSTOM SHOP</a>
-				<a>GEAR & ACCESSORIES</a>
-				<a>THIS IS MARTIN</a>
-			</div>
-			<div>
+
+		<nav class="header-bottom-full">
+			<div class="header-bottom row">
+				<div>
+					<img id="nav-logo" src="img/logo.png">
+				</div>
+				<ul class="nav-links">
+					<li><a>GUITARS</a></li>
+					<li><a>UKULELES</a></li>
+					<li><a>STRINGS</a></li>
+					<li><a>CUSTOM SHOP</a></li>
+					<li><a>GEAR & ACCESSORIES</a></li>
+					<li><a>THIS IS MARTIN</a></li>
+				</ul>
 				<div>
 					<h1>Search</h1>
 				</div>
@@ -41,6 +47,8 @@
 				</div>
 			</div>
 		</nav>
+
+
 	</header>
 
 	<script src="js/index.js"></script>
