--- a/index.html
+++ b/index.html
@@ -13,42 +13,41 @@
 
 <body>
 	<header>
-		<div class="header-top-full">
-			<div class="header-top-container row">
-				<div class="header-top">
+		<div class="header-top">
+			<div class="slim-row">
+				<div class="header-top-content">
 					<a>Find A Dealer</a>
-					<div class="header-top-support-container">
-						<a class="header-top-support">Support</a>
-						<span class="header-top-toggle"></span>
-					</div>
+					<a class="header-top-support">Support</a>
 				</div>
 			</div>
 		</div>
 
-
-		<nav class="header-bottom-full">
-			<div class="header-bottom row">
-				<div>
+		<!-- <nav>
+			<div class="header-bottom slim-row">
+				<div class="header-bottom-column-1">
 					<img id="nav-logo" src="img/logo.png">
 				</div>
-				<ul class="nav-links">
-					<li><a>GUITARS</a></li>
-					<li><a>UKULELES</a></li>
-					<li><a>STRINGS</a></li>
-					<li><a>CUSTOM SHOP</a></li>
-					<li><a>GEAR & ACCESSORIES</a></li>
-					<li><a>THIS IS MARTIN</a></li>
-				</ul>
-				<div>
-					<h1>Search</h1>
+				<div class="header-bottom-column-2">
+					<a>GUITARS</a>
+					<a>UKULELES</a>
+					<a>STRINGS</a>
+					<a>CUSTOM SHOP</a>
+					<a>GEAR & ACCESSORIES</a>
+					<a>THIS IS MARTIN</a>
 				</div>
-				<div>
-					<h1>Account/Cart</h1>
+				<div class="header-column-3">
+					<div class="header-bottom-search">
+						<form>
+							<input placeholder="Search">
+							<button class="header-bottom-search-button" type="submit"></button>
+						</form>
+					</div>
+					<div class="header-bottom-account-cart">
+						<h1>Account/Cart</h1>
+					</div>
 				</div>
 			</div>
-		</nav>
-
-
+		</nav> -->
 	</header>
 
 	<script src="js/index.js"></script>
