--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Martin Guitars | The Choice of Musicians Worldwide | C.F. Martin</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -14,20 +14,18 @@
 <body>
 	<header>
 		<div class="header-top">
-			<div class="slim-row">
-				<div class="header-top-content">
-					<a>Find A Dealer</a>
-					<a class="header-top-support">Support</a>
-				</div>
+			<div class="header-top-content slim-row">
+				<a>Find A Dealer</a>
+				<a class="header-top-support">Support</a>
 			</div>
 		</div>
 
-		<!-- <nav>
-			<div class="header-bottom slim-row">
+		<nav class="header-bottom">
+			<div class="header-bottom-content slim-row">
 				<div class="header-bottom-column-1">
-					<img id="nav-logo" src="img/logo.png">
+					<img id="header-logo" src="img/logo.png">
 				</div>
-				<div class="header-bottom-column-2">
+				<div id="header-nav-links" class="header-bottom-column-2">
 					<a>GUITARS</a>
 					<a>UKULELES</a>
 					<a>STRINGS</a>
@@ -35,19 +33,21 @@
 					<a>GEAR & ACCESSORIES</a>
 					<a>THIS IS MARTIN</a>
 				</div>
-				<div class="header-column-3">
-					<div class="header-bottom-search">
-						<form>
-							<input placeholder="Search">
-							<button class="header-bottom-search-button" type="submit"></button>
-						</form>
-					</div>
-					<div class="header-bottom-account-cart">
-						<h1>Account/Cart</h1>
-					</div>
+				<div class="header-bottom-column-3">
+					<form class="header-search-form">
+						<input class="header-search-input" placeholder="Search">
+						<button class="header-search-button" type="submit">
+							<img src="img/search-icon.png">
+						</button>
+					</form>
+				</div>
+				<div class="header-bottom-column-4">
+					<button id="account-button" class="header-bottom-button"></button>
+					<button id="cart-button" class="header-bottom-button"></button>
 				</div>
 			</div>
-		</nav> -->
+		</nav>
+
 	</header>
 
 	<script src="js/index.js"></script>
