Updated header navbar

--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
 				<div class="header-bottom-column-3">
 					<form class="header-search-form">
 						<input class="header-search-input" placeholder="Search">
-						<button class="header-search-button" type="submit">
-							<img src="img/search-icon.png">
-						</button>
+						<button class="header-search-button" type="submit"></button>
 					</form>
 				</div>
 				<div class="header-bottom-column-4">
-					<button id="account-button" class="header-bottom-button"></button>
-					<button id="cart-button" class="header-bottom-button"></button>
+					<button class="header-account-button header-button"></button>
+					<button class="header-cart-button header-button"></button>
 				</div>
 			</div>
 		</nav>
