Added to media queries for header

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 
 		<nav class="header-bottom">
 			<div class="header-bottom-content slim-row">
+				<div class="header-hamburger">
+					<img src="img/hamburgerThin.png">
+				</div>
 				<div class="header-bottom-column-1">
 					<img id="header-logo" src="img/logo.png">
 				</div>
-				<div id="header-nav-links" class="header-bottom-column-2">
+				<div class="header-bottom-column-2">
 					<a>GUITARS</a>
 					<a>UKULELES</a>
 					<a>STRINGS</a>
