--- a/index.html
+++ b/index.html
@@ -8,46 +8,59 @@
 	<title>Martin Guitars | The Choice of Musicians Worldwide | C.F. Martin</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<div class="header-top">
-			<div class="header-top-content slim-row">
+	<header class="header">
+		<div class="header-banner">
+			<div class="header-banner-content slim-row">
 				<a>Find A Dealer</a>
-				<a class="header-top-support">Support</a>
+				<a id="header-support">Support</a>
 			</div>
 		</div>
 
-		<nav class="header-bottom">
-			<div class="header-bottom-content slim-row">
-				<div class="header-hamburger">
-					<img src="img/hamburgerThin.png">
+		<nav class="header-nav">
+			<div class="header-nav-content slim-row">
+				<div id="header-menu-button">
+					<img src="img/icons/hamburger.png">
 				</div>
-				<div class="header-bottom-column-1">
+				<div class="header-nav-logo">
 					<img id="header-logo" src="img/logo.png">
 				</div>
-				<div class="header-bottom-column-2">
-					<a>GUITARS</a>
-					<a>UKULELES</a>
-					<a>STRINGS</a>
-					<a>CUSTOM SHOP</a>
-					<a>GEAR & ACCESSORIES</a>
-					<a>THIS IS MARTIN</a>
+				<div id="header-nav-links">
+					<a class="header-nav-link">GUITARS</a>
+					<a class="header-nav-link">UKULELES</a>
+					<a class="header-nav-link">STRINGS</a>
+					<a class="header-nav-link">CUSTOM SHOP</a>
+					<a class="header-nav-link">GEAR & ACCESSORIES</a>
+					<a class="header-nav-link">THIS IS MARTIN</a>
 				</div>
-				<div class="header-bottom-column-3">
+				<div id="header-nav-search">
 					<form class="header-search-form">
 						<input class="header-search-input" placeholder="Search">
-						<button class="header-search-button" type="submit"></button>
+						<button class="header-search-button header-button" type="submit"></button>
 					</form>
 				</div>
-				<div class="header-bottom-column-4">
+				<div class="header-nav-account">
 					<button class="header-account-button header-button"></button>
 					<button class="header-cart-button header-button"></button>
 				</div>
 			</div>
 		</nav>
+
+		<!-- <div class="column-2-row">
+			<div id="column-2-row-img-custom-shop" class="column-2-row-img"></div>
+			<div class="column-2-row-info">
+				<h1>Announcing the new custom shop 1937 models</h1>
+				<p>Sonic superiority of Martin's authentic series and the everyday practicality of a workhorse guitar
+				</p>
+				<div><a>Learn more about these models</a></div>
+			</div>
+		</div> -->
 
 	</header>
 
