--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<title>Martin Guitars | The Choice of Musicians Worldwide | C.F. Martin</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
 		rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -52,15 +54,18 @@
 			</div>
 		</nav>
 
-		<!-- <div class="column-2-row">
-			<div id="column-2-row-img-custom-shop" class="column-2-row-img"></div>
-			<div class="column-2-row-info">
-				<h1>Announcing the new custom shop 1937 models</h1>
-				<p>Sonic superiority of Martin's authentic series and the everyday practicality of a workhorse guitar
-				</p>
-				<div><a>Learn more about these models</a></div>
+		<div class="even-columns">
+			<div class="even-column-img"></div>
+			<div class="even-column-info">
+				<div class="column-info">
+					<h1>Announcing the new custom shop 1937 models</h1>
+					<p>Sonic superiority of Martin's authentic series and the everyday practicality of a workhorse
+						guitar
+					</p>
+					<div class="button"><a>Learn more about these models</a></div>
+				</div>
 			</div>
-		</div> -->
+		</div>
 
 	</header>
 
