--- a/index.html
+++ b/index.html
@@ -54,18 +54,69 @@
 			</div>
 		</nav>
 
-		<div class="even-columns">
-			<div class="even-column-img"></div>
-			<div class="even-column-info">
-				<div class="column-info">
-					<h1>Announcing the new custom shop 1937 models</h1>
-					<p>Sonic superiority of Martin's authentic series and the everyday practicality of a workhorse
-						guitar
-					</p>
-					<div class="button"><a>Learn more about these models</a></div>
+		<div>
+			<div id="asdf" class="even-columns">
+				<div id="column-image-custom-shop" class="even-column-image">
+					<img id="asdf" class="hide" src="img/photos/custom-shop.jpg">
+				</div>
+				<div class="even-column-info">
+					<div class="column-info">
+						<h1>Announcing the new custom shop 1937 models</h1>
+						<p>Sonic superiority of Martin's authentic series and the everyday practicality of a workhorse
+							guitar
+						</p>
+						<div class="button"><a>Learn more about these models</a></div>
+					</div>
+					<div class="carousel-buttons">
+						<button id="" class="carousel-button"></button>
+						<button id="" class="carousel-button"></button>
+						<button id="" class="carousel-button"></button>
+						<button id="" class="carousel-button"></button>
+						<button id="" class="carousel-button"></button>
+					</div>
 				</div>
 			</div>
-		</div>
+			<!-- <div class="even-columns">
+				<div id="column-image-performer" class="even-column-image"></div>
+				<div class="even-column-info">
+					<div class="column-info">
+						<h1>Jam in Place is Back</h1>
+						<p>New performances every week</p>
+						<div class="button"><a>See the lineup</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="even-columns">
+				<div id="column-image-ukulele" class="even-column-image"></div>
+				<div class="even-column-info">
+					<div class="column-info">
+						<h1>Concert uke fsc</h1>
+						<p>Built for serious players who want premium tone in an environmentally friendly instrument</p>
+						<div class="button"><a>Learn More</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="even-columns">
+				<div id="column-image-david-gilmour" class="even-column-image"></div>
+				<div class="even-column-info">
+					<div class="column-info">
+						<h1>D-35 David Gilmour Signature Models</h1>
+						<p>Life is impossible without a guitar</p>
+						<div class="button"><a>Learn more</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="even-columns">
+				<div id="column-image-luthier" class="even-column-image"></div>
+				<div class="even-column-info">
+					<div class="column-info">
+						<h1>Still Handmade. Still the standard.</h1>
+						<p>Amazing tone comes from artisans who do honest work with care and patience</p>
+						<div class="button"><a>Find out why handmade matters</a></div>
+					</div>
+				</div>
+			</div>
+		</div> -->
 
 	</header>
 
